# new-local-learn

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  项目优化0411.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
app/: __init__.py  devserver.py  main.py
app/api/routes/: graph.py  tasks.py
app/core/: audit.py  chat_models.py  config.py  models.py  security.py
app/services/analyzers/: backend_analyzer.py  critique_builder.py  deploy_analyzer.py  frontend_analyzer.py  logic_mapper.py  stack_detector.py  tutor_composer.py
app/services/chat/: answer_composer.py  answer_validator.py  evidence_assembler.py  llm_planning_agent.py  mcp_gateway.py  mcp_tools.py  models.py  orchestrator.py  question_analyzer.py  rule_fallback_planner.py
app/services/code_graph/: code_locator.py  embedding_indexer.py  evidence_builder.py  (+11 more)
app/storage/: artifacts.py  knowledge_store.py  task_store.py
app/tasks/: jobs.py  worker.py
tests/: conftest.py
tests/api/: test_graph_api.py  test_result_flow.py  test_task_chat_api.py  test_tasks_api.py
tests/tasks/: test_jobs.py  test_pipeline_integration.py  test_summary_generation_job.py
tests/unit/: test_analysis_services.py  test_answer_composer.py  test_answer_graph_linkage.py  test_answer_validator.py  test_bootstrap.py  test_chat_orchestrator.py  test_code_graph_evidence.py  test_code_graph_pipeline.py  test_code_graph_retrievers.py  test_code_graph_store.py  test_code_graph_summary_builder.py  test_cognition_summary_store.py  test_devserver.py  test_document_generation.py  test_embedding_indexer.py  test_evidence_assembler.py  test_knowledge_chat_service.py  test_knowledge_index_builder.py  test_knowledge_retriever.py  test_knowledge_store.py  test_llm_planning_agent.py  test_llm_services.py  test_llm_summary_service.py  test_mcp_gateway.py  test_mcp_tools.py  test_python_code_graph_adapter.py  test_question_analyzer.py  test_question_planner.py  test_repo_chat_service.py  test_repo_map_builder.py  test_repo_services.py  test_rule_fallback_planner.py  test_summary_embedding_inputs.py  test_summary_generation_service.py  test_task_store.py  test_vector_store.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/scripts/: run-vitest.mjs
web/src/: App.spec.ts  App.vue  main.ts
(+85 files in other folders)
