[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "github-doc-generator"
version = "0.1.0"
description = "Automation for generating technical documentation from GitHub repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "redis>=5.0.0",
  "arq>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "fakeredis>=2.21.0",
]
